--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="android:textAppearance">@style/AppTextLabel.S16</item>
     </style>
 
+    <style name="AppRoundedImage" >
+        <item name="cornerSize">6dp</item>
+        <item name="android:background">@drawable/background_gray_400</item>
+    </style>
+
 
     <style name="AppTextLabel.S16" parent="TextAppearance.Material3.LabelLarge">
         <item name="android:textSize">16sp</item>
