--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="gray_200">#D7DCE4</color>
     <color name="gray_300">#B4B9C2</color>
     <color name="gray_400">#D9D9D9</color>
+    <color name="gray_500">#8897AE</color>
     <color name="gray_800">#4B4747</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_200">#A6C6FF</color>
