feat: recyclerView 적용
- 더미 데이터를 이용하여 점검
- LostItem 데이터 클래스에서 관리

--- a/app/src/main/res/layout/activity_profile_add.xml
+++ b/app/src/main/res/layout/activity_profile_add.xml
@@ -21,8 +21,8 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_add_profile_image"
-        style="@style/AppRoundedImage"
-        app:shapeAppearanceOverlay="@style/AppRoundedImage"
+        style="@style/AppRoundedImageMedium"
+        app:shapeAppearanceOverlay="@style/AppRoundedImageMedium"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="10dp"
