fix: web uri 이미지가 불러오지 않는 버그 수정
- Glide 라이브러리를 활용하여 이미지 불러오기

--- a/app/src/main/res/layout/item_lost.xml
+++ b/app/src/main/res/layout/item_lost.xml
@@ -11,11 +11,12 @@
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/blue_100"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/AppRoundedImageLarge" />
+        app:shapeAppearanceOverlay="@style/AppRoundedImageLarge"
+        tools:background="@color/blue_100" />
 
     <TextView
         android:id="@+id/tv_lost_item_title"
