--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,13 @@
     <color name="gray_300">#B4B9C2</color>
     <color name="gray_400">#D9D9D9</color>
     <color name="gray_500">#8897AE</color>
+    <color name="gray_600">#5E5E5E</color>
     <color name="gray_800">#4B4747</color>
     <color name="gray_900">#474F5A</color>
 
     <color name="blue_100">#EEF4FF</color>
     <color name="blue_200">#A6C6FF</color>
     <color name="blue_500">#337CFF</color>
+
+    <color name="green_600">#7CCB84</color>
 </resources>
