--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppButtonOnPrimary" >
+    <style name="AppButtonOnPrimary">
         <item name="android:background">@drawable/selector_background_profile_button</item>
         <item name="android:textAppearance">@style/AppTextLabel.S16</item>
     </style>
 
-    <style name="AppRoundedImageLarge" >
+    <style name="AppButtonPrimary">
+        <item name="android:background">@drawable/background_blue_500</item>
+        <item name="android:textAppearance">@style/AppTextCaption.S16.Bold</item>
+    </style>
+
+    <style name="AppRoundedImageLarge">
         <item name="cornerSize">12dp</item>
     </style>
 
-    <style name="AppRoundedImageMedium" >
+    <style name="AppRoundedImageMedium">
         <item name="cornerSize">6dp</item>
         <item name="android:background">@drawable/background_gray_400</item>
     </style>
 
-    <style name="AppTextTitle.S16" parent="TextAppearance.Material3.TitleMedium" >
+    <style name="AppTextTitle" parent="TextAppearance.Material3.TitleMedium">
         <item name="android:textColor">@color/gray_900</item>
     </style>
 
+    <style name="AppTextTitle.S14">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="AppTextTitle.S16">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="AppTextTitle.S18">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="AppTextTitle.S14.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="AppTextTitle.S16.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTextTitle.S18.Bold">
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -31,9 +56,41 @@
         <item name="android:textSize">10sp</item>
     </style>
 
-    <style name="AppTextLabel.S16" parent="TextAppearance.Material3.LabelLarge">
-        <item name="android:textSize">16sp</item>
+    <style name="AppTextCaption" parent="TextAppearance.Material3.LabelSmall">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AppTextCaption.Grey600">
+        <item name="android:textColor">@color/gray_600</item>
+    </style>
+
+    <style name="AppTextCaption.Bold">
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTextCaption.S16">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="AppTextCaption.S16.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTextLabel" parent="TextAppearance.Material3.LabelLarge">
         <item name="android:textColor">@color/gray_300</item>
     </style>
+
+    <style name="AppTextLabel.S16">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTextLabel.S16.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTextLabel.S10">
+        <item name="android:textSize">10sp</item>
+    </style>
+
 </resources>
