--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,10 +9,13 @@
         android:id="@+id/navigation_home"
         android:name="com.dev_stopstone.seen.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_home_to_lost_detail"
             app:destination="@id/navigation_lost_detail" />
+        <action
+            android:id="@+id/action_home_to_register_lost_item"
+            app:destination="@id/navigation_register_lost_item" />
     </fragment>
     <fragment
         android:id="@+id/navigation_lost_detail"
@@ -23,4 +26,9 @@
             android:name="lostItem"
             app:argType="com.dev_stopstone.seen.LostItem" />
     </fragment>
+    <activity
+        android:id="@+id/navigation_register_lost_item"
+        android:name="com.dev_stopstone.seen.RegisterLostItemActivity"
+        android:label="RegisterLostItemActivity"
+        tools:layout="@layout/activity_register_lost_item" />
 </navigation>
