--- a/app/src/main/res/layout/activity_register_lost_item.xml
+++ b/app/src/main/res/layout/activity_register_lost_item.xml
@@ -30,21 +30,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/background_register"
         android:hint="@string/hint_register_item_title"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_title" />
 
-    <View
-        android:id="@+id/view_register_item_add_image"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/background_blue_500"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+
+    <ImageView
+        android:id="@+id/iv_register_item_add_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/background_register"
+        android:padding="5dp"
+        android:src="@drawable/ic_register_photo"
+        app:layout_constraintStart_toStartOf="@id/et_register_item_title"
         app:layout_constraintTop_toBottomOf="@id/et_register_item_title" />
+
 
     <TextView
         android:id="@+id/tv_register_item_description"
@@ -54,7 +57,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/label_description"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_register_item_add_image" />
+        app:layout_constraintTop_toBottomOf="@id/iv_register_item_add_image" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/et_register_item_description"
@@ -62,8 +65,10 @@
         android:layout_height="120dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/background_register"
         android:gravity="top"
         android:hint="@string/hint__register_item_description"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_description" />
@@ -84,8 +89,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/background_register"
         android:gravity="top"
         android:hint="@string/hint_find_location"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_location" />
@@ -96,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="@string/label_location"
+        android:text="@string/label_lost_item_reward"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_register_item_location" />
 
@@ -106,23 +113,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/background_register"
         android:gravity="top"
         android:hint="@string/label_reward_price"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_reward" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register_complete_button"
+        style="@style/AppButtonPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        style="@style/AppButtonPrimary"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="25dp"
         android:text="@string/label_register_item_button"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
