--- a/app/src/main/res/layout/activity_register_lost_item.xml
+++ b/app/src/main/res/layout/activity_register_lost_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,14 +41,28 @@
 
     <ImageView
         android:id="@+id/iv_register_item_add_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/background_register"
         android:padding="5dp"
         android:src="@drawable/ic_register_photo"
         app:layout_constraintStart_toStartOf="@id/et_register_item_title"
         app:layout_constraintTop_toBottomOf="@id/et_register_item_title" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_register_photo_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="@id/iv_register_item_add_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_register_item_add_image"
+        app:layout_constraintTop_toTopOf="@id/iv_register_item_add_image"
+        tools:listitem="@layout/item_register_photo" />
 
     <TextView
         android:id="@+id/tv_register_item_description"
