--- a/app/src/main/res/layout/activity_register_lost_item.xml
+++ b/app/src/main/res/layout/activity_register_lost_item.xml
@@ -48,7 +48,8 @@
         android:padding="5dp"
         android:src="@drawable/ic_register_photo"
         app:layout_constraintStart_toStartOf="@id/et_register_item_title"
-        app:layout_constraintTop_toBottomOf="@id/et_register_item_title" />
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_title"
+        android:contentDescription="@string/description_register_image" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_register_photo_list"
@@ -111,6 +112,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_location" />
+
+    <ImageView
+        android:id="@+id/iv_register_item_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/description_my_location"
+        android:src="@drawable/ic_location"
+        app:layout_constraintBottom_toBottomOf="@id/et_register_item_location"
+        app:layout_constraintEnd_toEndOf="@id/et_register_item_location"
+        app:layout_constraintTop_toTopOf="@id/et_register_item_location" />
 
     <TextView
         android:id="@+id/tv_register_item_reward"
