--- a/app/src/main/res/layout/activity_register_lost_item.xml
+++ b/app/src/main/res/layout/activity_register_lost_item.xml
@@ -45,11 +45,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/background_register"
+        android:contentDescription="@string/description_register_image"
         android:padding="5dp"
         android:src="@drawable/ic_register_photo"
         app:layout_constraintStart_toStartOf="@id/et_register_item_title"
-        app:layout_constraintTop_toBottomOf="@id/et_register_item_title"
-        android:contentDescription="@string/description_register_image" />
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_register_photo_list"
@@ -78,7 +78,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/et_register_item_description"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/background_register"
@@ -125,6 +125,41 @@
         app:layout_constraintTop_toTopOf="@id/et_register_item_location" />
 
     <TextView
+        android:id="@+id/tv_register_item_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/label_lost_date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_location" />
+
+
+    <EditText
+        android:id="@+id/et_register_item_date"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:autofillHints="text"
+        android:background="@drawable/background_register"
+        android:inputType="date"
+        android:padding="10dp"
+        app:layout_constraintStart_toStartOf="@id/tv_register_item_date"
+        app:layout_constraintTop_toBottomOf="@id/tv_register_item_date" />
+
+    <ImageView
+        android:id="@+id/iv_register_lost_date_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_calendar_date"
+        app:layout_constraintBottom_toBottomOf="@id/et_register_item_date"
+        app:layout_constraintEnd_toEndOf="@id/et_register_item_date"
+        app:layout_constraintTop_toTopOf="@id/et_register_item_date"
+        android:contentDescription="@string/description_date_calendar" />
+
+    <TextView
         android:id="@+id/tv_register_item_reward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -132,11 +167,11 @@
         android:layout_marginTop="20dp"
         android:text="@string/label_lost_item_reward"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_register_item_location" />
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_date" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/et_register_item_reward_price"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -144,7 +179,7 @@
         android:gravity="top"
         android:hint="@string/label_reward_price"
         android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_reward" />
 
@@ -155,9 +190,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
         android:text="@string/label_register_item_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_reward_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
