refactor: 네이버 api map fragment로 변경
- 현재 내 위치에서 지도 시작
- 카메라를 움직이는 동시에 마커 가운데 이동

--- a/app/src/main/res/layout/activity_register_location.xml
+++ b/app/src/main/res/layout/activity_register_location.xml
@@ -17,15 +17,16 @@
         app:title="분실물 찾기" />
 
     <!-- 네이버 맵 뷰 -->
-    <com.naver.maps.map.MapView
-        android:id="@+id/map_view"
+    <fragment
+        android:id="@+id/map_fragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:name="com.naver.maps.map.MapFragment"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_register_location" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_register_location"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_register_location_button"
         style="@style/AppButtonPrimary"
