--- a/app/src/main/res/layout/activity_register_lost_item.xml
+++ b/app/src/main/res/layout/activity_register_lost_item.xml
@@ -153,11 +153,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/description_date_calendar"
         android:src="@drawable/ic_calendar_date"
         app:layout_constraintBottom_toBottomOf="@id/et_register_item_date"
         app:layout_constraintEnd_toEndOf="@id/et_register_item_date"
-        app:layout_constraintTop_toTopOf="@id/et_register_item_date"
-        android:contentDescription="@string/description_date_calendar" />
+        app:layout_constraintTop_toTopOf="@id/et_register_item_date" />
 
     <TextView
         android:id="@+id/tv_register_item_reward"
@@ -178,8 +178,8 @@
         android:background="@drawable/background_register"
         android:gravity="top"
         android:hint="@string/label_reward_price"
-        android:padding="10dp"
         android:inputType="numberDecimal"
+        android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_register_item_reward" />
 
@@ -189,10 +189,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        android:enabled="false"
         android:text="@string/label_register_item_button"
-        app:layout_constraintTop_toBottomOf="@id/et_register_item_reward_price"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_register_item_reward_price" />
 </androidx.constraintlayout.widget.ConstraintLayout>
