style: 불필요한 마진값 제거

--- a/app/src/main/res/layout/fragment_lost_detail.xml
+++ b/app/src/main/res/layout/fragment_lost_detail.xml
@@ -8,8 +8,7 @@
     <androidx.core.widget.NestedScrollView
         android:fillViewport="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="100dp">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -179,6 +178,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_lost_item_start_chat"
+        android:elevation="5dp"
         style="@style/AppButtonPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
