--- a/app/src/main/res/layout/fragment_lost_detail.xml
+++ b/app/src/main/res/layout/fragment_lost_detail.xml
@@ -21,6 +21,8 @@
                 android:orientation="horizontal"
                 android:contentDescription="@string/description_lost_detail_image"
                 android:scaleType="centerCrop"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toTopOf="@id/tv_lost_item_detail_state"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
