feat: 분실물 위치를 반영할 네이게이션 기능 추가

--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -4,4 +4,10 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_navigation_home"
         android:title="@string/label_home" />
+
+    <item
+        android:id="@+id/navigation_location"
+        android:icon="@drawable/ic_navigation_map"
+        android:title="지도" />
+
 </menu>
